move carouselview to activechallenges content view

--- a/peloton-clone/peloton-clone/Views/ChallengesPage.xaml
+++ b/peloton-clone/peloton-clone/Views/ChallengesPage.xaml
@@ -5,6 +5,7 @@
              BackgroundColor="{StaticResource Background}"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              xmlns:helpers="clr-namespace:PelotonCloneApp.Helpers" xmlns:viewmodels="clr-namespace:PelotonCloneApp.ViewModels" xmlns:converters="clr-namespace:PelotonCloneApp.Converters"
+             xmlns:controls="clr-namespace:PelotonCloneApp.Controls"
              Shell.NavBarIsVisible="False"
              ios:Page.UseSafeArea="True"
              x:DataType="viewmodels:ChallengesViewModel">
@@ -29,7 +30,7 @@
     </ContentPage.Resources>
     <Grid 
           RowDefinitions="Auto,.9*,Auto"
-          Padding="0,8,0,8">
+          Padding="0,0,0,14">
         <Grid
               
                 Padding="16"
@@ -72,7 +73,7 @@
                    TextColor= "{Binding SelectedCategoryIndex, 
                     Converter={StaticResource SelectedIndexColorConverter}, 
                     ConverterParameter='1'}"
-              />
+              /> <!--- part 3 35:26-->
             </StackLayout>
             <StackLayout Grid.Column="2" Padding="16,16,16,0">
                 <StackLayout.GestureRecognizers>
@@ -94,194 +95,7 @@
                />
            </StackLayout>
         </Grid>
-        <CarouselView 
-            
-                      Grid.Row="1" 
-                      Loop="False" 
-                      PeekAreaInsets="20" 
-                      IndicatorView="indicatorView">
-            <CarouselView.ItemsLayout>
-                <LinearItemsLayout Orientation="Horizontal"
-                                   ItemSpacing="20" />
-            </CarouselView.ItemsLayout>
-            <CarouselView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Item One</x:String>
-                    <x:String>Item Two</x:String>
-                    <x:String>Item Three</x:String>
-                    <x:String>Item Three</x:String>
-                    <x:String>Item Three</x:String>
-                </x:Array>
-            </CarouselView.ItemsSource>
-            <CarouselView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Padding="0, 8, 0, 8" >
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="CommonStates">
-                                <VisualState x:Name="CurrentItem">
-                                    <VisualState.Setters>
-                                        <Setter Property="Scale"
-                                        Value="1.0" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="PreviousItem">
-                                    <VisualState.Setters>
-                                        <Setter Property="Scale"
-                                        Value=".95" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="NextItem">
-                                    <VisualState.Setters>
-                                        <Setter Property="Scale"
-                                        Value=".95" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="DefaultItem">
-                                    <VisualState.Setters>
-                                        <Setter Property="Scale"
-                                        Value=".95" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-                        <Frame 
-                        CornerRadius="8" 
-                        WidthRequest="320"
-                        BackgroundColor="{StaticResource CardBackground}"
-                        HasShadow="True" 
-                        Padding="0,0,4,0">
-                            <Frame.Background>
-                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                                    <GradientStop Color="#8A2387"
-                                                  Offset="0.1"/>
-                                    <GradientStop Color="#E94057"
-                                                  Offset="0.6" />
-                                    <GradientStop Color="#F27121"
-                                                  Offset="1.0" />
-
-                                </LinearGradientBrush>
-                            </Frame.Background>
-                            <Grid RowDefinitions="Auto,Auto,*,*,Auto"
-                                Padding="0,24,0,0"
-                                  RowSpacing="16">
-                                <Frame HeightRequest="100"
-                                       WidthRequest="100"
-                                       CornerRadius="50"
-                                       Padding="0"
-                                       HorizontalOptions="Center">
-                                    <Label Text="{x:Static helpers:FAIcons.Award}"
-                                       FontSize="60"
-                                       TextColor="{StaticResource TextSecondary}"
-                                       FontFamily="FASolid"
-                                       VerticalOptions="Center"
-                                       HorizontalOptions="Center"/>
-                                </Frame>
-                                <Frame Grid.Row="1" 
-                                       BackgroundColor="{StaticResource TextSecondary}"
-                                       HasShadow="False"
-                                       HorizontalOptions="Center"
-                                       Padding="12,6">
-                                    <StackLayout Orientation="Horizontal">
-                                        <Label FontSize="Micro" TextColor="White" Text="ACTIVE" />
-                                        <Label FontSize="Micro" TextColor="White" Text="-" />
-                                        <Label FontSize="Micro" TextColor="White" Text="14 DAYS LEFT" />
-
-                                    </StackLayout>
-                                </Frame>
-                                <StackLayout Grid.Row="2" VerticalOptions="Center">
-                                    <Label Grid.Row="2" 
-                                       HorizontalOptions="Center"
-                                       FontSize="24"
-                                       TextColor = "White"
-                                       Text="The Annual" />
-                                    <Label Grid.Row="2" 
-                                       HorizontalOptions="Center"
-                                       FontSize="18"
-                                       Text="Build habits for success"
-                                       TextColor = "White"
-                                       />
-                                </StackLayout>
-                                <StackLayout  Grid.Row="3" Orientation="Horizontal"
-                                              VerticalOptions="Center"
-                                              HorizontalOptions="Center"
-                                              Spacing="4">
-                                    <Label  
-                                        FontSize="Micro"
-                                        TextColor ="White"
-                                        FontFamily="FASolid" 
-                                        Text="{x:Static helpers:FAIcons.Check}" 
-                                        VerticalOptions="Center"/>
-                                    <Label Text="joined" FontSize="Micro" TextColor="White"/>
-                                    <Label 
-                                        Margin="12,0,0,0"
-                                        FontSize="Micro"
-                                        TextColor ="White"
-                                        FontFamily="FASolid" 
-                                        Text="{x:Static helpers:FAIcons.Users}" 
-                                        VerticalOptions="Center"/>
-                                    <Label Text="joined" FontSize="Micro" TextColor="White"/>
-                                    <Label Margin="12,0,0,0" Text="1,124,492 participants" FontSize="Micro" TextColor="White"/>
-                                </StackLayout>
-                                <Frame Grid.Row="4"
-                                       Padding="12" Margin="12,0,12,12"
-                                       HasShadow="False">
-                                    <Grid ColumnSpacing="10" ColumnDefinitions="Auto, *, Auto">
-                                        <Frame 
-                                        HeightRequest="50"
-                                        CornerRadius="25"
-                                        Padding="0"
-                                        BorderColor="{StaticResource TextSecondary}"
-                                        HasShadow="False"
-                                        WidthRequest="50"
-                                        HorizontalOptions="Center">
-                                            <Label Text="{x:Static helpers:FAIcons.ThumbsUp}"
-                                            FontSize="24"
-                                            TextColor="{StaticResource TextSecondary}"
-                                            FontFamily="FASolid"
-                                            VerticalOptions="Center"
-                                            HorizontalOptions="Center"/>
-                                        </Frame>
-                                        <StackLayout Grid.Column="1" Spacing="2" VerticalOptions="Center">
-                                            <Label Text="Unearned" FontSize="Small" TextColor="{StaticResource TextPrimary}"/>
-                                            <Label Text="616 min to 1k" FontSize="Micro" TextColor="{StaticResource TextSecondary}"/>
-                                            <ProgressBar Progress=".4" 
-                                                         ProgressColor="{StaticResource Accent}"
-                                                         HeightRequest="4"
-                                                         Margin="0,4,0,0"/>
-                                        </StackLayout>
-                                        <Frame 
-                                        HeightRequest="30"
-                                        Grid.Column="2"
-                                        VerticalOptions="End"
-                                        CornerRadius="15"
-                                        Padding="0"
-                                        BorderColor="{StaticResource TextSecondary}"
-                                        HasShadow="False"
-                                        WidthRequest="24"
-                                        HorizontalOptions="Center">
-                                            <Label Text="{x:Static helpers:FAIcons.Award}"
-                                                FontSize="24"
-                                                TextColor="{StaticResource TextSecondary}"
-                                                FontFamily="FASolid"
-                                                VerticalOptions="Center"
-                                                HorizontalOptions="Center"/>
-                                        </Frame>
-                                    </Grid>
-                                </Frame>
-
-                            </Grid>
-                        </Frame>
-                    </Grid>
-                </DataTemplate>
-            </CarouselView.ItemTemplate>
-        </CarouselView>
-        <IndicatorView x:Name="indicatorView"
-                       Grid.Row="2"
-                       HorizontalOptions="Center"
-                       IndicatorSize="10"
-                       IndicatorColor="#ADB4BD"
-                       SelectedIndicatorColor="#5D6578"
-                       />
+        <controls:ActiveChallengesView Grid.Row="1" />
 
     </Grid>
 </ContentPage>
